ec2-instances/app-server-blue/eip.tf
resource "aws_eip" "pebble-app-server-blue-qa" {
  instance = "${aws_instance.pebble-app-server-blue-qa.id}"
  
  vpc      = true
}
